syntax = "proto3";

package bitcoinPrices;

message Price {
  string Date = 1;
  float Price = 2;
  float Open = 3;
  float High = 4;
  float ChangePercentFromLastMonth = 5;
  string Volume = 6;
}

message Prices {
  repeated Price prices = 1;
}

service HistoryData {
  rpc get(Date) returns (Price);
  rpc list(Empty) returns (Prices);
  rpc listStream(Empty) returns (stream Price);
}

message Empty {}
message Date {
  string Date = 1;
}
